--- a/XamarintableView/MainPage.xaml
+++ b/XamarintableView/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="XamarintableView.MainPage">
         <StackLayout Margin="20, 20, 20, 20">
-            <Label Text="Above TableView"></Label>
+            <Label Text="{  Binding ButtonCommandResult }"></Label>
+            <Button Command="{ Binding ButtonCommand }" CommandParameter="Result is good!" BackgroundColor="Blue" TextColor="White" Text="Hello"/>
             <TableView>
                 <TableView.Root>
                     <TableSection Title="Test">
